# openproject-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  TODO.md  requirements.txt
.github/workflows/: tests.yml
.vss/sessions/: 2026-05-18T13-16-23Z.md
deploy/: .env.example  README.md  docker-compose.yml  tailscale-serve.json  update-mcp.sh
docs/superpowers/specs/: 2026-05-26-nas-http-transport-design.md
scripts/: setup-venv.sh
src/: pyproject.toml
src/openproject_mcp/: __main__.py  client.py  http_transport.py  server.py
src/openproject_mcp/tools/: meta.py  projects.py  time_entries.py  users.py  work_packages.py
tests/: conftest.py  test_client.py  test_http_lifespan.py  test_meta.py  test_projects.py  test_server_env_gates.py  test_time_entries.py  test_transport.py  test_users.py  test_work_packages.py
